Implemented vader solution

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "id": "0f897185",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "id": "7503d6e3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n"
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from sklearn.metrics import precision_score, recall_score, roc_auc_score, roc_curve\n"
    ]
   },
   {
@@ -58,12 +59,12 @@
    "id": "4d28489e",
    "metadata": {},
    "source": [
-    "##### Load dataset from kaggle"
+    "### Load dataset from kaggle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "id": "7ae094d4",
    "metadata": {},
    "outputs": [
@@ -156,7 +157,7 @@
        "4                                              Music         1  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,12 +175,12 @@
    "id": "30ec0bfc",
    "metadata": {},
    "source": [
-    "##### Handle null values"
+    "### Handle null values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 86,
    "id": "da9529ae",
    "metadata": {},
    "outputs": [
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "id": "8c0fc324",
    "metadata": {},
    "outputs": [
@@ -239,14 +240,14 @@
    "id": "d718d617",
    "metadata": {},
    "source": [
-    "##### Relationship Between Feedback and Rating\n",
+    "### Relationship Between Feedback and Rating\n",
     "\n",
     "The dataset contains both `feedback` and `rating` features. Understanding their relationship can provide insights into customer satisfaction and sentiment. Grouping and analyzing these features together can reveal patterns, such as whether higher ratings consistently correspond to positive feedback."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "id": "4b292918",
    "metadata": {},
    "outputs": [
@@ -262,7 +263,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 89,
    "id": "e2494ac0",
    "metadata": {},
    "outputs": [
@@ -330,7 +331,7 @@
    "id": "80889ef8",
    "metadata": {},
    "source": [
-    "#### Evaluation of other features"
+    "### Evaluation of other features"
    ]
   },
   {
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 90,
    "id": "ce2cd98c",
    "metadata": {
     "vscode": {
@@ -417,14 +418,14 @@
    "id": "1837e2b8",
    "metadata": {},
    "source": [
-    "#### Dropping Irrelevant Columns\n",
+    "### Dropping Irrelevant Columns\n",
     "\n",
     "For the sentiment analysis task, columns such as `date` and `variation` may not significantly contribute to predicting sentiment. Having said that, only the verified_reviews feature will be considered in next steps. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "id": "7b8e02d9",
    "metadata": {},
    "outputs": [
@@ -498,7 +499,7 @@
        "4         1                                              Music       5"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,21 +511,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f789e55d",
+   "id": "6fac9aa9",
    "metadata": {},
    "source": [
-    "# Model evaluation - functions definitions"
+    "# Solution evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c584895",
+   "execution_count": 100,
+   "id": "be2eb86f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "\n",
     "def evaluate_model(reviews_df):\n",
     "    negative_recall = recall_score(reviews_df['feedback'], reviews_df['predicted_feedback'], pos_label=0)\n",
     "    negative_precision = precision_score(reviews_df['feedback'], reviews_df['predicted_feedback'], pos_label=0)\n",
@@ -537,10 +536,7 @@
     "        \"negative_precision\": negative_precision,\n",
     "        \"positive_recall\": positive_recall,\n",
     "        \"positive_precision\": positive_precision\n",
-    "    }\n",
-    "\n",
-    "evaluation_results = evaluate_model(reviews_df)\n",
-    "print(evaluation_results)"
+    "    }"
    ]
   },
   {
@@ -548,12 +544,20 @@
    "id": "a1b942c8",
    "metadata": {},
    "source": [
-    "# Checking performance of Vader (Valence Aware Dictionary and sEntiment Reasoner)"
+    "# Vader (Valence Aware Dictionary and sEntiment Reasoner)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1e861b",
+   "metadata": {},
+   "source": [
+    "VADER is a lexicon and rule-based sentiment analysis tool that uses a pre-defined dictionary of words with associated sentiment scores to determine the sentiment polarity of text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "731e355a",
    "metadata": {},
    "outputs": [
@@ -634,7 +638,7 @@
        "4         1  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,12 +648,22 @@
     "    lambda review: analyzer.polarity_scores(review)['compound']\n",
     ")\n",
     "\n",
-    "reviews_df[['verified_reviews', 'vader_sentiment', 'feedback']].head()\n"
+    "reviews_df[['verified_reviews', 'vader_sentiment', 'feedback']].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "386e0a82",
+   "metadata": {},
+   "source": [
+    "### Optimal Threshold Calculation\n",
+    "\n",
+    "The code calculates the optimal threshold for sentiment classification using the ROC curve. The Youden's J statistic is used to determine the threshold that maximizes the difference between the true positive rate (TPR) and the false positive rate (FPR). This threshold can be used to improve the performance of the sentiment classification model by selecting the point on the ROC curve that provides the best trade-off between sensitivity and specificity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 102,
    "id": "b0640ba2",
    "metadata": {},
    "outputs": [
@@ -657,59 +671,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Threshold: -0.49999999999999956, Best Accuracy: 0.9291838678945697\n"
+      "Optimal Threshold: 0.4186\n"
      ]
     }
    ],
    "source": [
-    "def classify_sentiment(score, threshold=0.2):\n",
-    "    if score >= threshold:\n",
-    "        return 1\n",
-    "    return 0\n",
+    "fpr, tpr, thresholds = roc_curve(reviews_df['feedback'], reviews_df['vader_sentiment'])\n",
     "\n",
-    "def get_accuracy(threshold):\n",
-    "    reviews_df['predicted_feedback'] = reviews_df['vader_sentiment'].apply(\n",
-    "        lambda score: classify_sentiment(score, threshold=threshold)\n",
-    "    )\n",
-    "    return (reviews_df['predicted_feedback'] == reviews_df['feedback']).mean()\n",
+    "youden_j = tpr - fpr\n",
+    "optimal_idx = np.argmax(youden_j)\n",
+    "optimal_threshold = thresholds[optimal_idx]\n",
     "\n",
-    "best_threshold = 0\n",
-    "best_accuracy = 0\n",
-    "for threshold in np.arange(-1, 1, 0.01):\n",
-    "    accuracy = get_accuracy(threshold)\n",
-    "    if accuracy > best_accuracy:\n",
-    "        best_accuracy = accuracy\n",
-    "        best_threshold = threshold\n",
-    "\n",
-    "print(f\"Best Threshold: {best_threshold}, Best Accuracy: {best_accuracy}\")"
+    "print(f\"Optimal Threshold: {optimal_threshold}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d59465c6",
+   "metadata": {},
+   "source": [
+    "### Performance on optimal threshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "fe03a674",
+   "execution_count": 106,
+   "id": "38521145",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall (Negative Reviews): 0.19921875\n",
-      "Precision (Negative Reviews): 0.7391304347826086\n"
+      "Model Evaluation Results:\n",
+      "Negative Recall: 0.7773\n",
+      "Negative Precision: 0.2355\n",
+      "Positive Recall: 0.7767\n",
+      "Positive Precision: 0.9753\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import recall_score\n",
+    "reviews_df['predicted_feedback'] = reviews_df['vader_sentiment'].apply(\n",
+    "    lambda x: 1 if x >= optimal_threshold else 0\n",
+    ")\n",
     "\n",
-    "# Calculate recall for negative reviews (feedback = 0)\n",
-    "negative_recall = recall_score(reviews_df['feedback'], reviews_df['predicted_feedback'], pos_label=0)\n",
+    "results = evaluate_model(reviews_df)\n",
+    "print(\"Model Evaluation Results:\")\n",
+    "print(f\"Negative Recall: {results['negative_recall']:.4f}\")\n",
+    "print(f\"Negative Precision: {results['negative_precision']:.4f}\")\n",
+    "print(f\"Positive Recall: {results['positive_recall']:.4f}\")\n",
+    "print(f\"Positive Precision: {results['positive_precision']:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c265e3c",
+   "metadata": {},
+   "source": [
+    "The model demonstrates strong performance in identifying positive feedback, as evidenced by a high Positive Precision (97.53%) and Positive Recall (77.67%). This indicates that the model is highly accurate in predicting positive feedback and captures a significant proportion of actual positive feedback.\n",
     "\n",
-    "print(f\"Recall (Negative Reviews): {negative_recall}\")\n",
-    "# Calculate precision for negative reviews (feedback = 0)\n",
-    "negative_precision = precision_score(reviews_df['feedback'], reviews_df['predicted_feedback'], pos_label=0, average='binary')\n",
-    "\n",
-    "print(f\"Precision (Negative Reviews): {negative_precision}\")"
+    "However, the performance for negative feedback is less robust. While the Negative Recall (77.73%) suggests the model captures a reasonable proportion of actual negative feedback, the Negative Precision (23.55%) indicates a high rate of false positives for negative predictions. This imbalance suggests that the model struggles to accurately distinguish negative feedback."
    ]
   }
  ],
